# Vendorsguard.ai

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  deploy.sh  mcp_config.json  pyproject.toml  requirements.txt  semgrep_rules.yml
.agents/skills/: developing-with-streamlit
app/: __init__.py  agent.py  pipeline.py
app/.adk/: session.db
app/tools/: __init__.py  confidence_evaluator.py  redaction.py
data/: sample_questionnaire.csv  sample_questionnaire.json
docs/: ARCHITECTURE.md
knowledge/: architecture_overview.md  security_policy.md  soc2_summary.md
skills/confidence-compliance-evaluator/: SKILL.md
source/: pyvenv.cfg
tests/: test_confidence_evaluator.py
ui/: streamlit_app.py
ui/.adk/: session.db
vendorguard_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
vendorguard_ai.egg-info/.adk/: session.db
