[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vendorguard-ai"
version = "0.1.0"
description = "A Python ADK multi-agent vendor risk assessment security agent."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "google-adk",
    "streamlit",
    "pandas",
    "python-dotenv",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "semgrep",
    "detect-secrets",
    "pytest",
]

[tool.setuptools]
packages = ["app", "app.tools"]
